Update MIS Project - Football Draft Main Program.ipynb

--- a/MIS Project - Football Draft Main Program.ipynb
+++ b/MIS Project - Football Draft Main Program.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This program is intended to assist first-time and veteran sports betters by providing a data analytics platform for football team (soccer in the US) statistics. After prompting the user for their username and password (or allowing them to register a new account), the program allows users to change their password or delete their account information entirely, if chosen. From there, the program's main menu displays the four analytics modules that can be utilized to analyze data provided by the program's .csv file of football games from 2009-2019. \n",
     "\n",
-    "Authors: Murilo Gustineli, Samiksha Kamireddy, Michael Lowe, Jared Bischoff, David Liu, Ashish Nasa\n",
+    "Author: Murilo Gustineli\n",
     "\n",
     "Date: 1 December 2019"
    ]
